test/language/spec/declarations/valid/other.topo
// Companion module for file_import.topo test

namespace other {
  public:
    void helper();
}
