test/language/spec/declarations/invalid/unknown_type.topo
// TEST: unknown type name
// EXPECT-ERROR: unknown.*type|invalid.*type

namespace app {
  public:
    NonExistentType compute();
}
